# Pong-SDL2

./: .gitignore  .gitmodules  .travis.yml  Ball.cpp  Ball.h  CMakeLists.txt  LICENSE  Paddle.cpp  Paddle.h  README.md  Utils.cpp  build-debug.sh  build.sh  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
Objects/: Ball.cpp  Ball.h  Paddle.cpp
src/: MP.cpp  MP.h  PongRPC.cpp  PongRPC.h  Utils.cpp  Utils.h  main.cpp
src/Objects/: Ball.cpp  Ball.h  Paddle.cpp
src/include/discord-rpc/: CMakeLists.txt
